--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   </head>
 
   <body>
+    <h1><%= link_to 'Dyls FaceSpace', root_path %></h1>
+    <%= render 'layouts/nav' %>
     <%= yield %>
   </body>
 </html>
