--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,5 @@
+<h2>Posts</h2>
 <% @posts.each do |post| %>
-    <%= post.title %>
+    <h4><%= link_to post.title, post_path(post) %></h4>
+    <p><%= post.content %></p>
 <% end %>
