--- a/app/views/users/user_posts.html.erb
+++ b/app/views/users/user_posts.html.erb
@@ -1,6 +1,6 @@
 <h2><%= @user.name %></h2>
 <ul>
     <% @user.posts.each do |post| %>
-        <li><%= post.title %></li>
+        <li><%= link_to post.title, post_path(post) %></li>
     <% end %>
 </ul>
